--- a/CHANGES.html
+++ b/CHANGES.html
@@ -1,5 +1,14 @@
 <h2>Software Release Notes for Hamnet-DB</h2>
 
+<h3>Version 3.9 (06.03.2016)</h3>
+<ul>
+<li>Better checks for dhcp-ranges in subnets
+<li>Fixed double host entrys in hostlist and dns-export
+<li>Increased usability for sites with many antenna-coverages 
+<li>Better parameter checks for hosts
+<li>Added 32-bit AS support
+</ul>
+
 <h3>Version 3.8 (10.08.2015)</h3>
 <ul>
 <li>ISM-Sites and links 
