--- a/help-de.html
+++ b/help-de.html
@@ -379,8 +379,7 @@ Ja, der Quellcode ist genau wie der Dateninhalt unter der
 CC BY-NC-SA</a>-Lizenz 
 offengelegt und kann unter Utilities heruntergeladen werden.
 <p>
-Ein öffentlich zugreifbares Repository existiert bisher nicht.
-Gegenfrage: Hat jemand eines, das für den Zweck nutzbar ist?
+Seit Version 3.8 liegt der Quellcode auch auf Github <a href="https://github.com/hamnetdb/hamnetdb.git">https://github.com/hamnetdb/hamnetdb.git</a>
 
 <h3>Ich will an der Software etwas verändern, wie gehe ich vor?</h3>
 Sowohl die Software als auch der Datenbankinhalt können unter Utilities 
