--- a/ip-calculator.html
+++ b/ip-calculator.html
@@ -13,7 +13,7 @@
 -->
 <html>
 <head>
-	<title>IP calc</title>
+	<title>IP calculator</title>
 
 	
 	<script language="javascript" type="text/javascript">
