--- a/CHANGES.html
+++ b/CHANGES.html
@@ -1,5 +1,13 @@
 <h2>Software Release Notes for Hamnet-DB</h2>
 
+<h3>Version 4.0 (23.07.2017)</h3>
+<ul>
+<li>Some small improvements on the dns export
+<li>Updated the map framework and libraries
+<li>Improved the mobile usability of the map 
+<li>Small improvements to the map for usability and design
+</ul>
+
 <h3>Version 3.9 (06.03.2016)</h3>
 <ul>
 <li>Better checks for dhcp-ranges in subnets
