--- a/help-de.html
+++ b/help-de.html
@@ -231,6 +231,19 @@ Hostnamen untergebracht werden. Hilfreich ist es ggf., weitere am Standort
 vorhandene Rufzeichen im Kommentar der Site zu beschreiben.
 
 <p>
+<h3>Monitoring</h3>
+<p>Eingetragene Hosts werden automatisch zyklisch mit einem Ping auf ihre 
+erreichbarkeit überprüft, sollte dies nicht erwünscht sein kann dies mit 
+"No ping check" deaktiviert werden.
+<p>
+Die Option "Monitor" bietet die Möglichkeit Linkstrecken zu überwachen, 
+somit ist dies nur für IP-Adressen sinnvoll, die direkt die Hardware der HF-Linkstrecken bedienen.<br> 
+Ein SNMP-Zugang mit Leserechten für die Community "public" muss auf dem Gerät eingerichtet sein.<br> 
+Diese Option befindet sich noch in der frühen Erprobungsphase.
+<br>
+
+
+ 
 <br>
 <br>
 <h2 id="antenna">Funkabdeckung</h2>
