--- a/CHANGES.html
+++ b/CHANGES.html
@@ -1,5 +1,15 @@
 <h2>Software Release Notes for Hamnet-DB</h2>
 
+<h3>Version 4.2 (23.12.2017)</h3>
+<ul>
+<li>Implementation of topographic profile tool
+<li>Visualisation of monitored RSSI 
+<li>Lots of minor optical cosmetics
+<li>Improvements for mobile browsers
+<li>Early begin of link monitoring interface
+<li>Remove outdated Google maps support
+</ul>
+
 <h3>Version 4.1 (11.12.2017)</h3>
 <ul>
 <li>Country-overview as first entry of AS page
