--- a/help-de.html
+++ b/help-de.html
@@ -231,16 +231,35 @@ Hostnamen untergebracht werden. Hilfreich ist es ggf., weitere am Standort
 vorhandene Rufzeichen im Kommentar der Site zu beschreiben.
 
 <p>
+<h3>Linktool</h3>
+Zur einfachen abschätzung ob zwischen 2 Geografischen Punkten freie Sicht besteht ist ein Linktool implementiert.<br>
+Zum einen kann das Profil zwischen fix eingetragenen Standorten angezeigt werden,
+dafür kann bei einem Standort (Site) unten auf den nahegelegenden Sites auf "Profile" geklickt werden.<br>
+Mit "Show in linktool" kann die Linkstrecke mit berechnetem Profil in der Karte dargestellt werden.<br>
+<br>
+Direkt in der Karte können mit Rechtsklick "place From" bzw. "place To" Marker gesetzt werden, zur feinjustage können diese mit dreag&drop verschoben werden. 
+Mit einm Linksklick auf die Marker oder auf die Linie dazwischen kann das Profil betrachtet werden, darunter befinden sich einige Einstellungsmöglichkeiten.<br>
+Die Option "treesize" blendet Bäume ein sofern diese in die Fresnelzone reichen. Mangels Daten wird ein flächendeckender Wald angenommen. Ab einer Höhe von 1000m wird die Baumgröße bis 2000m linear abgebaut um die Baumgrenze abzubilden.<br>
+Um die position einer bestehenden Site zu verwenden kann mit Rechtsklick "snap to From" bzw. "snap to To" dessen Position übernommen werden.
+<br>
+Der Parameter "Refrac" dient zur korrektur der terrestrischen Refraktion.<br>
+Die Höhendaten für die Berechnung stammen von NASA (SRTM1), ESA bzw. EU (Copernicus), und DGM Österreich<br>
+Die Linkprofile werden mit einem Programm von OE5DXL berechnet.  
+<br>
+
+<p>
 <h3>Monitoring</h3>
 <p>Eingetragene Hosts werden automatisch zyklisch mit einem Ping auf ihre 
 erreichbarkeit überprüft, sollte dies nicht erwünscht sein kann dies mit 
 "No ping check" deaktiviert werden.
 <p>
-Die Option "Monitor" bietet die Möglichkeit Linkstrecken zu überwachen, 
+Die Option "Monitor" bietet die Möglichkeit Linkstrecken welche mittels Transfernetzen realisiert sind zu überwachen, 
 somit ist dies nur für IP-Adressen sinnvoll, die direkt die Hardware der HF-Linkstrecken bedienen.<br> 
 Ein SNMP-Zugang mit Leserechten für die Community "public" muss auf dem Gerät eingerichtet sein.<br> 
-Diese Option befindet sich noch in der frühen Erprobungsphase.
-<br>
+Die korrekt erfassten RSSI Werte werden bei den gelisteten Linkstrecken angezeigt, 
+in der Karte kann die Ebene "Hamnet RSSI" eingeblendet werden und zeigt eine farbliche abstufung der Werte. <br>
+Eine Legende kann rechts unter <b>"i"</b> gefunden werden.<br>
+Diese Option befindet sich noch in der frühen Erprobungsphase.<br>
 
 
  
