--- a/help-de.html
+++ b/help-de.html
@@ -241,8 +241,9 @@ Direkt in der Karte können mit Rechtsklick "place From" bzw. "place To" Marker 
 Mit einm Linksklick auf die Marker oder auf die Linie dazwischen kann das Profil betrachtet werden, darunter befinden sich einige Einstellungsmöglichkeiten.<br>
 Die Option "treesize" blendet Bäume ein sofern diese in die Fresnelzone reichen. Mangels Daten wird ein flächendeckender Wald angenommen. Ab einer Höhe von 1000m wird die Baumgröße bis 2000m linear abgebaut um die Baumgrenze abzubilden.<br>
 Um die position einer bestehenden Site zu verwenden kann mit Rechtsklick "snap to From" bzw. "snap to To" dessen Position übernommen werden.
-<br>
+<br>Im Diagramm wird rechts oben die Freiraumdämpfung (free-space path loss) angezeigt, sollten Bäume am unteren Rand der Fresnelzone zu mehr als 10% des Radius in diese hineinrage wird der Wert gelb, bei hineinragender Felsen/Erde wird selbiger Wert rot.
 Der Parameter "Refrac" dient zur korrektur der terrestrischen Refraktion.<br>
+<br>
 Die Höhendaten für die Berechnung stammen von NASA (SRTM1), ESA bzw. EU (Copernicus), und DGM Österreich<br>
 Die Linkprofile werden mit einem Programm von OE5DXL berechnet.  
 <br>
