--- a/help-de.html
+++ b/help-de.html
@@ -77,7 +77,7 @@ Regionen aufgeteilt, in DL üblicherweise DARC-Distrikte oder Teile davon.
 Ein AS hat jeweils mindestens ein <b>AS-Backbone</b>-Subnetz für das Routing 
 und ein <b>AS-User/Services</b>-Subnetz für die Benutzerzugänge und Dienste.<br>
 </ul>
-<h3>Verbindungen</h3>
+<h3 >Verbindungen</h3>
 In der Regel wird (zumindest in DL) pro Verbindung ein Transport-Subnetz
 vom Typ Backbone-Network vergeben. Im einfachsten Fall werden über ein
 solches Netz genau zwei Knoten miteinander verbunden (Point-to-Point).
@@ -148,7 +148,7 @@ Vermutungen sollten als solche gekennzeichnet werden (z.B. mit ? dahinter).
 Manchmal helfen sie, meistens sollten sie aber einfach weggelassen werden.
 </ul>
 
-<h3>Versionsverwaltung</h3>
+<h3 id="versioning">Versionsverwaltung</h3>
 <p>
 Alle Daten unterliegen einer Versionierung. Dabei gilt grundsätzlich,
 dass Daten nie gelöscht oder überschrieben werden. Jede Änderung wird in
@@ -175,7 +175,7 @@ Tipp: Wird der Copy-Knopf vergessen, ist auch das nicht tragisch. Es lässt
 sich nach dem Speichern auf die vorherige Version zurückspringen, 
 diese kopieren und speichern und damit zu retten.
 
-<h3>Hostnamen, Aliases und DNS-Zonengenerierung</h3>
+<h3 id="hostname">Hostnamen, Aliases und DNS-Zonengenerierung</h3>
 <p>
 Ein Nutzen der Eingabe aller IP-Adressen und Namen ist die automatische
 Erzeugung von DNS-Zonen (siehe <a href="?m=util">Utilities</a>). 
@@ -231,13 +231,13 @@ Hostnamen untergebracht werden. Hilfreich ist es ggf., weitere am Standort
 vorhandene Rufzeichen im Kommentar der Site zu beschreiben.
 
 <p>
-<h3>Linktool</h3>
+<h3 id="linktool">Linktool</h3>
 Zur einfachen abschätzung ob zwischen 2 Geografischen Punkten freie Sicht besteht ist ein Linktool implementiert.<br>
 Zum einen kann das Profil zwischen fix eingetragenen Standorten angezeigt werden,
 dafür kann bei einem Standort (Site) unten auf den nahegelegenden Sites auf "Profile" geklickt werden.<br>
 Mit "Show in linktool" kann die Linkstrecke mit berechnetem Profil in der Karte dargestellt werden.<br>
 <br>
-Direkt in der Karte können mit Rechtsklick "place From" bzw. "place To" Marker gesetzt werden, zur feinjustage können diese mit dreag&drop verschoben werden. 
+Direkt in der Karte können mit Rechtsklick "place From" bzw. "place To" Marker gesetzt werden, zur feinjustage können diese mit drag&drop verschoben werden. 
 Mit einm Linksklick auf die Marker oder auf die Linie dazwischen kann das Profil betrachtet werden, darunter befinden sich einige Einstellungsmöglichkeiten.<br>
 Die Option "treesize" blendet Bäume ein sofern diese in die Fresnelzone reichen. Mangels Daten wird ein flächendeckender Wald angenommen. Ab einer Höhe von 1000m wird die Baumgröße bis 2000m linear abgebaut um die Baumgrenze abzubilden.<br>
 Um die position einer bestehenden Site zu verwenden kann mit Rechtsklick "snap to From" bzw. "snap to To" dessen Position übernommen werden.
@@ -248,7 +248,7 @@ Die Linkprofile werden mit einem Programm von OE5DXL berechnet.
 <br>
 
 <p>
-<h3>Monitoring</h3>
+<h3 id="monitoring">Monitoring</h3>
 <p>Eingetragene Hosts werden automatisch zyklisch mit einem Ping auf ihre 
 erreichbarkeit überprüft, sollte dies nicht erwünscht sein kann dies mit 
 "No ping check" deaktiviert werden.
