--- a/help-de.html
+++ b/help-de.html
@@ -232,19 +232,33 @@ vorhandene Rufzeichen im Kommentar der Site zu beschreiben.
 
 <p>
 <h3 id="linktool">Linktool</h3>
-Zur einfachen abschätzung ob zwischen 2 Geografischen Punkten freie Sicht besteht ist ein Linktool implementiert.<br>
-Zum einen kann das Profil zwischen fix eingetragenen Standorten angezeigt werden,
-dafür kann bei einem Standort (Site) unten auf den nahegelegenden Sites auf "Profile" geklickt werden.<br>
-Mit "Show in linktool" kann die Linkstrecke mit berechnetem Profil in der Karte dargestellt werden.<br>
+Zur einfachen abschätzung ob zwischen 2 Geografischen Punkten freie Sicht 
+besteht ist ein Linktool implementiert.<br>
+Zum einen kann das Profil zwischen fix eingetragenen Standorten angezeigt 
+werden, dafür kann bei einem Standort (Site) unten auf den nahegelegenden 
+Sites auf "Profile" geklickt werden.<br>
+Mit "Show in linktool" kann die Linkstrecke mit berechnetem Profil in 
+der Karte dargestellt werden.<br>
 <br>
-Direkt in der Karte können mit Rechtsklick "place From" bzw. "place To" Marker gesetzt werden, zur feinjustage können diese mit drag&drop verschoben werden. 
-Mit einm Linksklick auf die Marker oder auf die Linie dazwischen kann das Profil betrachtet werden, darunter befinden sich einige Einstellungsmöglichkeiten.<br>
-Die Option "treesize" blendet Bäume ein sofern diese in die Fresnelzone reichen. Mangels Daten wird ein flächendeckender Wald angenommen. Ab einer Höhe von 1000m wird die Baumgröße bis 2000m linear abgebaut um die Baumgrenze abzubilden.<br>
-Um die position einer bestehenden Site zu verwenden kann mit Rechtsklick "snap to From" bzw. "snap to To" dessen Position übernommen werden.
-<br>Im Diagramm wird rechts oben die Freiraumdämpfung (free-space path loss) angezeigt, sollten Bäume am unteren Rand der Fresnelzone zu mehr als 10% des Radius in diese hineinrage wird der Wert gelb, bei hineinragender Felsen/Erde wird selbiger Wert rot.
+Direkt in der Karte können mit Rechtsklick "place From" bzw. "place To" 
+Marker gesetzt werden, zur feinjustage können diese mit drag&drop 
+verschoben werden. Mit einm Linksklick auf die Marker oder auf die Linie
+ dazwischen kann das Profil betrachtet werden, darunter befinden sich 
+ einige Einstellungsmöglichkeiten.<br>
+Die Option "treesize" blendet Bäume ein sofern diese in die Fresnelzone 
+reichen. Mangels Daten wird ein flächendeckender Wald angenommen. 
+Ab einer Höhe von 1000m wird die Baumgröße bis 2000m linear abgebaut 
+um die Baumgrenze abzubilden.<br>
+Um die position einer bestehenden Site zu verwenden kann mit Rechtsklick 
+"snap to From" bzw. "snap to To" dessen Position übernommen werden.
+<br>
+Im Diagramm wird rechts oben die Freiraumdämpfung (free-space path loss) 
+angezeigt, sollten Bäume am unteren Rand der Fresnelzone zu mehr als 10% des 
+Radius in diese hineinrage wird der Wert gelb, bei hineinragender Felsen/Erde analog rot.
 Der Parameter "Refrac" dient zur korrektur der terrestrischen Refraktion.<br>
-Die Höhendaten für die Berechnung stammen von NASA (SRTM1), ESA bzw. EU (Copernicus), und DGM Österreich<br>
-Die Linkprofile werden mit einem Programm von OE5DXL berechnet.  
+Die Höhendaten für die Berechnung stammen von NASA (SRTM1), ESA bzw. EU (Copernicus), 
+und DGM Österreich<br>
+Die Linkprofile werden mit einem <a href="https://github.com/oe5hpm/dxlAPRS">Programm</a> von OE5DXL berechnet.  
 <br>
 
 <p>
