Revert "4.2" file settings This reverts commit 61867c5762c71304c5cb94401969f5af81f5d22b.

--- a/help-de.html
+++ b/help-de.html
@@ -274,10 +274,6 @@ Ein SNMP-Zugang mit Leserechten für die Community "public" muss auf dem Gerät 
 Die korrekt erfassten RSSI Werte werden bei den gelisteten Linkstrecken angezeigt, 
 in der Karte kann die Ebene "Hamnet RSSI" eingeblendet werden und zeigt eine farbliche abstufung der Werte. <br>
 Eine Legende kann rechts unter <b>"i"</b> gefunden werden.<br>
-In der Karte werden nur Linkstrecken farblich gekennzeichnet, 
-bei denen von beiden Seiten RSSI-Werte vorhanden sind, 
-im Infopopup in der Karte sowie der Listenansicht der einzelnen Sites
-werden die Werte immer angezeigt.
 Diese Option befindet sich noch in der frühen Erprobungsphase.<br>
 
 
@@ -296,8 +292,7 @@ dass es einige Zeit (bis zu 2 Stunden) dauern kann bis eine Abdeckung verfügbar
 Eine neue Abdeckung wird berechnet sobald Werte im Formular geändert werden.<br>
 Für die Berechnung stehen für folgende Länder Höhendaten zu verfügung:
 BeNeLux-Staaten, Deutschland, Frankreich, Italien, Kroatien, Österreich, Schweiz, Slowenien.
-Wenn eine Abdeckung für eine Site außerhalb dieses Gebietes berechneterer werden möchte, 
-bitte wende dich an <a href="hamnetdb.net/impressum">Flori, DL8MBT</a>
+Wenn eine Abdeckung für eine Site außerhalb dieses Gebietes berechneterer werden möchte, bitte wende dich an <a href="hamnetdb.net/impressum">Flori, DL8MBT</a>
 </p>
 <p>
 <h3>Eingabe Parameter</h3>
