--- a/help-de.html
+++ b/help-de.html
@@ -252,10 +252,9 @@ um die Baumgrenze abzubilden.<br>
 Um die position einer bestehenden Site zu verwenden kann mit Rechtsklick 
 "snap to From" bzw. "snap to To" dessen Position übernommen werden.
 <br>
-Im Diagramm wird rechts oben die Freiraumdämpfung (free-space path loss [FSPL]) 
+Im Diagramm wird rechts oben die Freiraumdämpfung (free-space path loss) 
 angezeigt, sollten Bäume am unteren Rand der Fresnelzone zu mehr als 10% des 
 Radius in diese hineinrage wird der Wert gelb, bei hineinragender Felsen/Erde analog rot.
-Für die Farbe des FSPL, werden die Bäume auf dem ersten und letzten Kilometer ignoriert.
 Der Parameter "Refrac" dient zur korrektur der terrestrischen Refraktion.<br>
 Die Höhendaten für die Berechnung stammen von NASA (SRTM1), ESA bzw. EU (Copernicus), 
 und DGM Österreich<br>
