--- a/CHANGES.html
+++ b/CHANGES.html
@@ -1,4 +1,7 @@
 <h2>Software Release Notes for Hamnet-DB</h2>
+added virtual sites for hamcloud
+check if google is available/reachable in map
+
 
 <h3>Version 4.2 (23.12.2017)</h3>
 <ul>
