--- a/CHANGES.html
+++ b/CHANGES.html
@@ -1,7 +1,10 @@
 <h2>Software Release Notes for Hamnet-DB</h2>
-added virtual sites for hamcloud
-check if google is available/reachable in map
 
+<h3>Version 4.3 (24.2.2018)</h3>
+<ul>
+<li>added virtual sites for hamcloud
+<li>check if google is available/reachable in map	
+</ul>
 
 <h3>Version 4.2 (23.12.2017)</h3>
 <ul>
