--- a/CHANGES.html
+++ b/CHANGES.html
@@ -4,6 +4,7 @@
 <ul>
 <li>added virtual sites for hamcloud
 <li>check if google is available/reachable in map	
+<li>RF-Tools added to map (4.3.5)
 </ul>
 
 <h3>Version 4.2 (23.12.2017)</h3>
