--- a/help-de.html
+++ b/help-de.html
@@ -424,25 +424,16 @@ Dadurch werden diese Daten auch nicht von Suchmaschinen oder
 Spambots gefunden.
 
 <h3>Ist die Hamnet-DB über das Hamnet erreichbar?</h3>
-Ja, derzeit ist das System unter folgenden Adressen erreichbar:<br>
-<p><a href="http://44.134.190.114/">http://44.134.190.114/</a> &nbsp;&nbsp;
-     hamnetdb.ir3dv (Kronplatz/Bruneck)
-<p>
-Der Nutzen aus dem Hamnet ist allerdings eher zweifelhaft: 
-Auch verlinkte Informationen
-sind im Zweifelsfall eher unter Internet-Adressen zu finden. Außerdem soll
-es sich ja gerade um die Grundlage handeln, um das Hamnet aufzubaun, 
-d.h. örtlich dürfte der Zugriff über Hamnet gelegentlich
-ein Henne-Ei-Problem haben.
+Ja, das System ist unter folgenden Adresse erreichbar:<br>
+<p><a href="http://hamnetdb.hc.r1.ampr.org">http://hamnetdb.hc.r1.ampr.org</a> &nbsp;&nbsp;
 
 <h3>Wo wird das System betrieben, können die Daten verloren gehen?</h3>
 hamnetdb.net wird gemeinsam mit 
 <a href="http://www.foto-webcam.eu">www.foto-webcam.eu</a> auf einem 
-<a href="http://www.hetzner.de/hosting/produkte_rootserver/ex4">Hetzner EX4</a>
-root-Server betrieben. Für Notfälle steht ein Hetzner EQ4 als Standby-System
-zur Verfügung, auf dem die Daten täglich gespiegelt werden. Zusätzlich erfolgt
-zweimal täglich ein Datenabzug auf ein NAS bei <a href="/impressum/">dl8mbt</a>
-zuhause, aus dem wiederum eine Wiederherstellung des Systems möglich wäre.
+<a href="http://www.hetzner.de/">Hetzner</a>
+root-Server betrieben.
+Zweimal täglich erfolgt ein Datenabzug auf ein NAS bei <a href="/impressum/">dl8mbt</a>
+zuhause, aus dem eine Wiederherstellung des Systems möglich wäre.
 <p>
 Auch wenn es nicht auszuschließen ist, ist dennoch ein Datenverlust oder
 längerer Ausfall damit recht unwahrscheinlich.
