--- a/CHANGES.html
+++ b/CHANGES.html
@@ -1,4 +1,9 @@
 <h2>Software Release Notes for Hamnet-DB</h2>
+<h3>Version 4.4 (26.10.2018)</h3>
+<ul>
+<li>Added positions Marker in rftools/Point-to-Point-Profile
+<li>Removed Minimap from Map
+</ul>
 
 <h3>Version 4.3 (24.2.2018)</h3>
 <ul>
