--- a/CHANGES.html
+++ b/CHANGES.html
@@ -1,4 +1,11 @@
 <h2>Software Release Notes for Hamnet-DB</h2>
+<h3>Version 4.5 (23.02.2019)</h3>
+<ul>
+<li>Added Panorama to RF-Tools
+<li>Added Search to map
+<li>better performance for map (canvas)
+</ul>	
+
 <h3>Version 4.4 (26.10.2018)</h3>
 <ul>
 <li>Added positions Marker in rftools/Point-to-Point-Profile
