--- a/help-de.html
+++ b/help-de.html
@@ -247,6 +247,7 @@ Diese Option befindet sich noch in der frühen Erprobungsphase.<br>
 
 <h2 id="rftools">RF-Tools</h2>
 <h3 id="linktool">Link-Profile</h3>
+<img src="demo_profile.png" class="help-inline">
 Zur einfachen abschätzung ob zwischen 2 Geografischen Punkten freie Sicht 
 besteht ist ein Linktool implementiert.<br>
 Zum einen kann das Profil zwischen fix eingetragenen Standorten angezeigt 
@@ -273,6 +274,7 @@ Radius in diese hineinrage wird der Wert gelb, bei hineinragender Felsen/Erde an
 Der Parameter "Refrac" dient zur korrektur der terrestrischen Refraktion.<br>
 <p>
 <h3>(RF)-Visibility</h3>
+<img src="demo_visibility.png" class="help-inline">
 Zur abschätzung ob ein Gebiet erreicht werden kann, dafür werden am 
 rechten Rand der Karte die "RF-Tools" geöffnet und ein oder zwei Marker gesetzt.<br>
 Um die Position einer bestehenden Site zu übernehmen, <br>
@@ -294,6 +296,36 @@ die Position der Maste wird jeweils durch ein "X"gekennzeichnet.<br>
 Wird ein Gebiet von beiden Positionen erreicht, wird dieser türkis markiert.<br>
 Die Markierungen werden nur bis zur Zoomstufe 14 angezeigt, 
 da darüber keine zusätzliche Information angezeigt würde.<br>
+<br>
+<br>
+<p>
+<h3>(RF)-Panorama</h3>
+<img src="demo_panorama.png" class="help-inline">
+Welche Amateurfunkstandorte sehe ich von einem Standort aus?<br>
+Wohin soll ich die Antenne ausrichten? Wie heißen die Berge in Sichtweite?<br>
+Wie breitet sich die elektromagnetischen Wellen im vergleich zu optischen Sicht aus? <br>
+Diese Fragestellungen können mit dem Panorama-Tool beantwortet werden.<br>
+Am rechten Rand der Karte können die (RF)-Tools (Mast-Symbol) geöffnet werden, im unteren Bereich befinden sich das Panorama-Menü<br>
+Mit dem Marker FROM wird die eigene Position gesetzt, der Marker TO definiert den Horizont und somit den Rechenaufwand bzw. Rechenzeit!<br>
+Mehr zu den Markern FROM & TO kann in der Hilfe von <b>Link-Profile</b> und <b>RF-Visibility</b> nachgelesen werden.<br>
+Wenn eine Einstellung geändert wird, wird das Panorama erst durch den Button "recalculate" oder "show panorama" neu berechnet und aktualisiert.<br>
+Mit der Einstellung "horizontal sight angle" wird der Öffnungswinkel verändert und somit auch der Zoom. <br>
+Unter "advanced options" können weitere Einstellungen geändert werden. <br>
+POI (Point of Interest) werden durch verschiedene Icons im Panorama dargestellt. Wenn die Maus auf ein POI zeigt wird der Name angezeigt. <br>
+Die Position der Maus auf dem Panorama wird auf der Karte angezeigt, mit einem Doppelklick wird die Position der Karte auf jene verschoben.<br>
+Unterhalb des Panoramas wird die Entfernung zur Kamera sowie die Seehöhe angezeigt.<br>
+Wird auf einen Webcam-POI doppelt geklickt, kann damit die Webcam geöffnet werden.<br>
+Unter dem Panorama im Browserfenster der Karte, kann mit "open big panorama" ein Panorama in eigenem Fenster geöffnet werden.<br>
+Nach dem verändern der Fenstergröße kann mit "recalculate" ein Panorama mit entsprechender Größe berechnet werden. <br>
+Die Funktionen mit der Maus funktionieren auch im seperaten Fenster. <br>
+Im seperaten Fenster kann auch eine beliebige Größe eingestellt werden. Dafür muss bei "custom size" der Haken gesetzt werden. Die maximale Auflösung ist 8000x2160.<br> 
+
+
+
+
+<!--POI aussehen dblclick  , big panorama   -->
+
+
 
 <br><br>
 Im unteren Bereich gibt es einen Permalink, damit können gerechnete 
