--- a/CHANGES.html
+++ b/CHANGES.html
@@ -1,4 +1,12 @@
 <h2>Software Release Notes for Hamnet-DB</h2>
+<h3>Version 4.6 (07.09.2019)</h3>
+<ul>
+<li>Added tree and surface support to RF-Tools
+<li>updated binary files for RF-Tools, thanks to Christian OE5DXL
+<li>added surface information to SRTM-Files based on openstreetmap.org
+</ul>	
+
+
 <h3>Version 4.5 (23.02.2019)</h3>
 <ul>
 <li>Added Panorama to RF-Tools
