--- a/help-de.html
+++ b/help-de.html
@@ -219,6 +219,9 @@ Die Verarbeitung von Hostnamen steht im Einklang mit den
 <a href="http://www.amateurfunk-wiki.de/index.php/DNS-Namensregeln">hier</a>
 beschriebenen Empfehlungen.
 
+<h3>Eintrag von persönlichen Rufzeichen</h3>
+<p>Die IP-Koordination DL hat sich im Jahr 2019 mit dem Datenschutz beschäftigt und weist beim Eintrag von persönlichen Rufzeichen (insbesondere nicht dem eigenen Rufzeichen) auf ihre Veröffentlichung hin: <a href="https://www.de.ampr.org/ip-koordination/datenschutz">https://www.de.ampr.org/ip-koordination/datenschutz</a>
+
 <h3>Mehrere Rufzeichen an einem Standort</h3>
 <p>Eine Site wird nach ihrem Rufzeichen benannt. Sollen mehrere Rufzeichen
 an einem Standort betrieben werden, muss eine eindeutige Abbildung erfolgen.
