--- a/CHANGES.html
+++ b/CHANGES.html
@@ -1,4 +1,13 @@
 <h2>Software Release Notes for Hamnet-DB</h2>
+<h3>Version 4.6.5 (05.01.2020)</h3>
+<ul>
+<li>added JSON export for tables
+<li>added BGP-Monitoring support, thanks to Kurt DJ3MU
+<li>added Links to Grafana (grafana.hamnetdb.net) for monitoring history
+<li>improvement on mapelements.cgi performance
+<li>updated parts of german help
+</ul>	
+
 <h3>Version 4.6 (07.09.2019)</h3>
 <ul>
 <li>Added tree and surface support to RF-Tools
