--- a/CHANGES.html
+++ b/CHANGES.html
@@ -1,4 +1,9 @@
 <h2>Software Release Notes for Hamnet-DB</h2>
+<h3>Version 4.7 (02.02.2020)</h3>
+<ul>
+<li>added Traceroute function
+</ul>
+
 <h3>Version 4.6.5 (05.01.2020)</h3>
 <ul>
 <li>added JSON export for tables
@@ -14,7 +19,6 @@
 <li>updated binary files for RF-Tools, thanks to Christian OE5DXL
 <li>added surface information to SRTM-Files based on openstreetmap.org
 </ul>	
-
 
 <h3>Version 4.5 (23.02.2019)</h3>
 <ul>
