--- a/help-de.html
+++ b/help-de.html
@@ -262,7 +262,7 @@ in dem auch einige Sonderfälle bei der Konfiguration beschrieben sind.<br>
 <h3 id="bgp">BGP Monitoring</h3>
 <p>
 Es können die BGP-Peerings über die HamnetDB gemonitored werden.
-Dazu sollte am Host des Routers der Haken "BGP" gesetzt werden. 
+Dazu sollte am Host des Routers der Haken "Routing" gesetzt werden. 
 In der Seite des Hosts gibt es danach einen Link 
 "test Routing monitoring" mit dem die Einstellungen getestet
 werden können, dieser erscheint aber nur wenn man in der
